cmake_minimum_required(VERSION 3.18)
project(cuda_example LANGUAGES CXX CUDA)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CUDA_STANDARD 17)
set(CMAKE_CUDA_STANDARD_REQUIRED ON)

add_executable(cuda_example main.cu)

# Możesz dodać inne flagi w zależności od potrzeb:
# set_target_properties(cuda_example PROPERTIES CUDA_SEPARABLE_COMPILATION ON)